# protal

./: .gitignore  .gitmodules  CMakeLists.txt  build_env_setup.sh  conda_build.sh  environment.sh  protal_config.h.in  seeding_strategy_safe.txt  varkit_protal_speed.txt
conda_recipe/: build.sh  meta.yaml
lib/gzstream/: CMakeLists.txt  test_gunzip.C  test_gzip.C
lib/wfa2-lib/: CMakeLists.txt
lib/wfa2-lib-2.3.4/: CMakeLists.txt  CMakeLists2.txt
lib/wfa2-lib-2.3.4/bindings/cpp/: WFAligner.hpp
lib/wfa2-lib/alignment/: cigar.c
lib/wfa2-lib/bindings/cpp/: WFAligner.cpp  WFAligner.hpp
lib/wfa2-lib/wavefront/: wavefront_aligner.c
scripts/: generate_map.py  random_forest.R
src/: Build.h  CMakeLists.txt  Classify.h  Constants.h  Options.h  RunProtal.h  Statistics.h  Test.h  main.cpp  protal_config.h
src/Alignment/: AlignmentUtils.h  FastAlignment.h  InternalReadAlignment.h  ScoreAlignments.h  WFA2Wrapper.h  WFA2Wrapper2.h
src/Core/: AlignmentStrategy.h  AnchorFinder.h  ChainAnchorFinder.h  ChainingStrategy.h  CoreBenchmark.h  SeedingStrategy.h
src/Hash/: KmerLookup.h  KmerPutter.h  Seedmap.h  SeedmapFlex.h  compact_map.cpp  compact_map.h  compact_map_utils.h
src/IO/: AlignmentOutputHandler.h  BufferedOutput.cpp  BufferedOutput.h  FastxReader.cpp  FastxReader.h  SamHandler.h  TaxonStatisticsOutput.h
src/Profiler/: ReadFilter.h
src/Profiling/: Profiler.h  ProfilerOptions.h  Strain.h  TreeFilter.h
src/SNPs/: SNP.h  SNPUtils.h
src/SequenceUtils/: GenomeLoader.h  KmerIterator.h  KmerProcessor.h  KmerUtils.h  Minimizer.h  SeqReader.h  SequenceRange.cpp  SequenceRange.h  SequenceRangeHandler.cpp  SequenceRangeHandler.h  Variant.h  VariantHandler.h
src/Strains/: Distances.h  MSA.h
src/Taxonomy/: Taxonomy.cpp  Taxonomy.h
src/Utils/: Benchmark.h  BinaryClassifierEvaluator.h  LineSplitter.h  Matrix.h  ProgressBar.h  Utils.h
src/VarkitInterface/: VarkitInterface.h
src/gzstream/: cmake_install.cmake
src/wfa/: cmake_install.cmake
uml/: protal_flow.puml
